...
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="PlanName" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hGs-Ho-vpy">
                                                    <rect key="frame" x="0.0" y="0.0" width="220" height="29"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="planName_planScene"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                                    <nil key="textColor"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Plan" id="xld-gq-mvW">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="rgM-JB-RpL">
                            <connections>
...
                                                            <rect key="frame" x="50" y="5" width="99" height="45"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TaskTitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bpn-2
                                                                    <rect key="frame" x="0.0" y="0.0" width="99" height="20"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="TaskTitle"/>
...
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="StartDate - DueDate" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hCA-Rk-rKU">
                                                                    <rect key="frame" x="0.0" y="25" width="99" height="20"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="TaskDate"/>
                                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                                    <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalCompressionResistancePriority="752" editable="NO" text="TaskDesc" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jg0-cf-uot">
                                                    <rect key="frame" x="0.0" y="53" width="320" height="105"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="TaskDescription"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="104.5" id="aNc-jx-ufk"/>
...
                                                            <rect key="frame" x="0.0" y="0.0" width="320" height="30"/>
                                                            <subviews>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Priority" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8c9-72-UeM">
                                                                    <rect key="frame" x="0.0" y="0.0" width="156" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Priority"/>
...
                                                                    <nil key="highlightedColor"/>
                                                                </label>
                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Progress" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iii-vQ-MbW">
                                                                    <rect key="frame" x="164" y="0.0" width="156" height="30"/>
                                                                    <accessibility key="accessibilityConfiguration" identifier="Progress"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Task" largeTitleDisplayMode="never" id="nok-MU-363">
                        <barButtonItem key="backBarButtonItem" title="New Task" id="u7g-Pm-fib"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="nPZ-6i-ggb">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Task Priority" id="j2x-LQ-p2Y"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="35D-Bn-s9j" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Task Progress" id="iL2-HD-VMW"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GQH-XU-4Da" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Plan" id="ksG-Dw-aSz">
                        <barButtonItem key="backBarButtonItem" title="New Plan" id="ZJa-sa-6dU"/>
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="aew-Cx-lVt">
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Plan Type" id="c6p-fY-Yin"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="f9g-fv-2d6" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" verticalCompressionResistancePriority="752" text="Task Overall" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qny-9e-sHq">
                                <rect key="frame" x="5" y="10" width="98.5" height="21.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
