...
enum PlanType: String {
    
    case study = "Study"
    case work = "Work"
    case shopping = "Shopping"
    case travel = "Travel"
    case game = "Game"
    case other = "Others"
    
    static var all: [PlanType] {
        return [.study, .work, .shopping, .travel, .game, .other]
    }
}

