...
        
        planImage.image = selectedImage
        
        dismiss(animated: true, completion: nil)
    }
    
    //Dismiss the keyboard when the 'Return' button was pressed
    @IBAction func returnPressed(_ sender: UITextField) {
        planNameTextField.resignFirstResponder()
        planDescTextField.resignFirstResponder()
    } //end of returnPressed
    
    //Update the save button's state according to the TextFields' contents
...
